# ModdingLexicon

./: .gitignore  AddonDetailWindow.qml  BrowseAddonsView.qml  CMakeLists.txt  CMakeUserPresets.json  ListItemDelegate.qml  Main.qml  MainTabBar.qml  MyAddonsView.qml  README.md  SettingsView.qml  installer.iss  main.cpp  version.json
include/: AddonFilterModel.h  AddonInstaller.h  AddonModel.h  CategoryModel.h  HttpClient.h  ModType.h  descriptionfetcher.h  descriptionparser.h  http_client.h  lexicon.h  parser.h  pathing.h
resources/: Fonts.qrc  lexicon.rc
src/: AddonFilterModel.cpp  AddonModel.cpp  CategoryModel.cpp  HttpClient.cpp  descriptionfetcher.cpp  descriptionparser.cpp  lexicon.cpp  parser.cpp  pathing.cpp
